--- a/css/curriculo.css
+++ b/css/curriculo.css
@@ -23,7 +23,7 @@ main{
     align-items: center;
     text-align: center;
     font-family: 'Arial, Helvetica, sans-serif';
-    font-size: 100%;
+    font-size: 2em;
     color: #fff;
 }
 
