--- a/css/curriculo.css
+++ b/css/curriculo.css
@@ -23,7 +23,7 @@ main{
     align-items: center;
     text-align: center;
     font-family: 'Arial, Helvetica, sans-serif';
-    font-size: 2em;
+    font-size: 200%;
     color: #fff;
 }
 
@@ -84,17 +84,17 @@ main{
 
 .dados-texto{
     color: aliceblue;
-    width: 50em;
+    width: auto;
 }
 
 .experiencia-texto{
     color: aliceblue;
-    width: 50em;
+    width: 60%;
 }
 
 .outras-texto{
     color: aliceblue;
-    width: 50em;
+    width: auto;
 }
 
 .bloco p{
@@ -108,6 +108,24 @@ main{
 
 .icones-sociais li{
     display: inline-block;
+}
+
+.icones img{
+    width: 60px; 
+    height: 60px;
+    transition: all .5s ease-out;
+    align-content: center;
+    justify-content: center;
+    box-sizing: border-box;
+    border-radius: 100%;
+    
+}
+
+.icones-sociais img:hover{
+    cursor: pointer;
+    transform: translateY(-2px);
+    box-shadow: 2px 8px 8px 0px rgba(207, 207, 207, 0.5);
+    background-color: transparent;
 }
 
 .rodape{
