--- a/css/curriculo.css
+++ b/css/curriculo.css
@@ -94,20 +94,22 @@ main{
 .icones-sociais li{
     display: inline-block;
 }
-.icones img{
-    width: 60px; 
-    height: 60px;
+.icones a i{
+    color: aliceblue;
+    font-size: 50px;
     transition: all .5s ease-out;
     align-content: center;
     justify-content: center;
     box-sizing: border-box;
-    border-radius: 100%;
-}
-.icones-sociais img:hover{
+    padding-left: 5px;
+ }
+.linkedin i:hover{
     cursor: pointer;
-    transform: translateY(-2px);
-    box-shadow: 2px 8px 8px 0px rgba(207, 207, 207, 0.5);
-    background-color: transparent;
+    color: #007bb5;
+}
+.github i:hover{
+    cursor: pointer;
+    color: #272f33;
 }
 .rodape{
     background-color: rgba(0, 0, 0, .7);
