--- a/css/curriculo.css
+++ b/css/curriculo.css
@@ -117,7 +117,7 @@ main{
     color: aliceblue;
     font-size: 50px;
     transition: all .5s ease-out;
-    padding: 5px 0;
+    padding:0 3px;
  }
 .linkedin i:hover{
     cursor: pointer;
