--- a/css/curriculo.css
+++ b/css/curriculo.css
@@ -98,6 +98,7 @@ main{
 @media (max-width: 600px){
     .bloco p{
         font-size: 200% !important;
+        color: aqua;
     }
 }
 .texto-experiencia{
@@ -107,7 +108,6 @@ main{
     display: inline-block;
 }
 .icones{
-    height: 40px;
     display: flex;
     align-content: center;
     justify-content: center;
