--- a/css/curriculo.css
+++ b/css/curriculo.css
@@ -48,8 +48,24 @@ main{
     width: 100vw;
     height: 100vh;
 }
+.foto{
+    display: flex;
+}
+.foto-perfil{
+    width: 190px;
+    height: 190px;
+    border: 2px solid black;
+    border-radius: 50%;
+    box-sizing: border-box;
+    margin-left: auto;
+    margin-right: auto;
+}
+h1{
+    font-size: 300%;
+    text-align: center;
+}
 #s_dados{
-    background-color: rgb(43, 41, 41);
+    background-color: rgb(36, 35, 35);
     justify-content: center;
     align-content: center;
     align-items: center;
