--- a/css/curriculo.css
+++ b/css/curriculo.css
@@ -160,14 +160,14 @@ em{
         padding-top: 4%;
     }
     .foto-perfil{
-        height: 50%;
-        width: 50%;
+        height: 45%;
+        width: 45%;
     }
     h1{
-        font-size: 150%;
+        font-size: 130%;
     }
     .bloco p{
-        font-size: 75% !important;
+        font-size: 60% !important;
     }
     .dados-texto{
         width: 85%;
@@ -182,6 +182,6 @@ em{
         font-size: 200%;
     }
     .rodape{
-        font-size: 65%;
+        display: none;
     }
 }
